# Deforest.id

./: .env.example  .gitignore  Makefile  README.md  check_tasks.py  enable_drive.py  masalah.md  metodologi.tex  mkdocs.yml  planning.md  proposal.aux  proposal.out  proposal.tex  proposal.toc  rancangan-storage.md  rancangan-training-data.md  run_export.sh  run_export_all.sh  run_export_wsl.py  setup_bucket.py  setup_drive_folder.py  test_auth.py  test_drive_sa.py
.dvc/: config
data/: aoi_hl_boven_merauke.geojson  aoi_hl_boven_merauke_simple.geojson  sample_1.geojson  sample_2.geojson  sample_3.geojson  sample_4.geojson  sample_5.geojson  sample_6.geojson  sample_7.geojson  samples_manifest.json
docs/: annotation-pipeline.md  data-format.md  getting-started.md  icp.md  index.md  results.md  training-pipeline.md  training_report.tex
paper/: bibliography.bib  defense_document.tex  icp-refs.bib  icp.docx  icp.tex  icp_eng.tex  icp_indo.tex  main-3.docx  main.tex
reports/: multitemporal_results.tex  references.bib
scripts/: _train_bg.sh  add_cloud_ndvi_label.py  check_corrupted.py  check_singledate.py  cloud_utils.py  compare_viz.py  generate_labels.py  infer_multitemporal.py  infer_siamese.py  infer_unet.py  plot_curves.py  plot_training_curve.py  requirements-labeling.txt  requirements-training.txt  split_dataset.py  train_multitemporal.py  train_siamese.py  train_unet.py  (+3 more)
services/annotation-pipeline/: Makefile  config.py  exporter.py  ndvi_annotator.py  preprocess.py  pyproject.toml  requirements.txt  review_predictions.py  reviewer.py  run.py  visualizer.py
(+35 files in other folders)
