[project]
name = "deforest-annotation"
version = "0.1.0"
description = "Annotation pipeline for Deforest.id — NDVI-based weak label generation & U-Net dataset export"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "streamlit>=1.28",
    "scikit-image>=0.21",
    "matplotlib>=3.7",
]

[tool.uv]
dev-dependencies = []

[project.scripts]
deforest-annotate = "run:main"
